// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSDynamicIcon Ellie 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-ellie slds-is-animated"
        title="Ellie icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 280 14"
        >
          <circle
            cx="7"
            cy="7"
            r="4"
          />
          <circle
            cx="7"
            cy="7"
            r="3"
          />
          <circle
            cx="21"
            cy="7"
            r="4"
          />
          <circle
            cx="21"
            cy="7"
            r="3"
          />
          <circle
            cx="35"
            cy="7"
            r="4"
          />
          <circle
            cx="35"
            cy="7"
            r="3"
          />
          <circle
            cx="49"
            cy="7"
            r="4"
          />
          <circle
            cx="49"
            cy="7"
            r="3"
          />
          <circle
            cx="63"
            cy="7"
            r="4"
          />
          <circle
            cx="63"
            cy="7"
            r="3"
          />
          <circle
            cx="77"
            cy="7"
            r="4"
          />
          <circle
            cx="77"
            cy="7"
            r="3"
          />
          <circle
            cx="91"
            cy="7"
            r="4"
          />
          <circle
            cx="91"
            cy="7"
            r="3"
          />
          <circle
            cx="105"
            cy="7"
            r="4"
          />
          <circle
            cx="105"
            cy="7"
            r="3"
          />
          <circle
            cx="119"
            cy="7"
            r="4"
          />
          <circle
            cx="119"
            cy="7"
            r="3"
          />
          <circle
            cx="133"
            cy="7"
            r="4"
          />
          <circle
            cx="133"
            cy="7"
            r="3"
          />
          <circle
            cx="147"
            cy="7"
            r="4"
          />
          <circle
            cx="147"
            cy="7"
            r="3"
          />
          <circle
            cx="161"
            cy="7"
            r="4"
          />
          <circle
            cx="161"
            cy="7"
            r="3"
          />
          <circle
            cx="175"
            cy="7"
            r="4"
          />
          <circle
            cx="175"
            cy="7"
            r="3"
          />
          <circle
            cx="189"
            cy="7"
            r="4"
          />
          <circle
            cx="189"
            cy="7"
            r="3"
          />
          <circle
            cx="203"
            cy="7"
            r="4"
          />
          <circle
            cx="203"
            cy="7"
            r="3"
          />
          <circle
            cx="217"
            cy="7"
            r="4"
          />
          <circle
            cx="217"
            cy="7"
            r="3"
          />
          <circle
            cx="231"
            cy="7"
            r="4"
          />
          <circle
            cx="231"
            cy="7"
            r="3"
          />
          <circle
            cx="245"
            cy="7"
            r="4"
          />
          <circle
            cx="245"
            cy="7"
            r="3"
          />
          <circle
            cx="259"
            cy="7"
            r="4"
          />
          <circle
            cx="259"
            cy="7"
            r="3"
          />
          <circle
            cx="273"
            cy="7"
            r="4"
          />
          <circle
            cx="273"
            cy="7"
            r="3"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Ellie icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-ellie slds-is-animated slds-is-paused"
        title="Ellie icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 280 14"
        >
          <circle
            cx="7"
            cy="7"
            r="4"
          />
          <circle
            cx="7"
            cy="7"
            r="3"
          />
          <circle
            cx="21"
            cy="7"
            r="4"
          />
          <circle
            cx="21"
            cy="7"
            r="3"
          />
          <circle
            cx="35"
            cy="7"
            r="4"
          />
          <circle
            cx="35"
            cy="7"
            r="3"
          />
          <circle
            cx="49"
            cy="7"
            r="4"
          />
          <circle
            cx="49"
            cy="7"
            r="3"
          />
          <circle
            cx="63"
            cy="7"
            r="4"
          />
          <circle
            cx="63"
            cy="7"
            r="3"
          />
          <circle
            cx="77"
            cy="7"
            r="4"
          />
          <circle
            cx="77"
            cy="7"
            r="3"
          />
          <circle
            cx="91"
            cy="7"
            r="4"
          />
          <circle
            cx="91"
            cy="7"
            r="3"
          />
          <circle
            cx="105"
            cy="7"
            r="4"
          />
          <circle
            cx="105"
            cy="7"
            r="3"
          />
          <circle
            cx="119"
            cy="7"
            r="4"
          />
          <circle
            cx="119"
            cy="7"
            r="3"
          />
          <circle
            cx="133"
            cy="7"
            r="4"
          />
          <circle
            cx="133"
            cy="7"
            r="3"
          />
          <circle
            cx="147"
            cy="7"
            r="4"
          />
          <circle
            cx="147"
            cy="7"
            r="3"
          />
          <circle
            cx="161"
            cy="7"
            r="4"
          />
          <circle
            cx="161"
            cy="7"
            r="3"
          />
          <circle
            cx="175"
            cy="7"
            r="4"
          />
          <circle
            cx="175"
            cy="7"
            r="3"
          />
          <circle
            cx="189"
            cy="7"
            r="4"
          />
          <circle
            cx="189"
            cy="7"
            r="3"
          />
          <circle
            cx="203"
            cy="7"
            r="4"
          />
          <circle
            cx="203"
            cy="7"
            r="3"
          />
          <circle
            cx="217"
            cy="7"
            r="4"
          />
          <circle
            cx="217"
            cy="7"
            r="3"
          />
          <circle
            cx="231"
            cy="7"
            r="4"
          />
          <circle
            cx="231"
            cy="7"
            r="3"
          />
          <circle
            cx="245"
            cy="7"
            r="4"
          />
          <circle
            cx="245"
            cy="7"
            r="3"
          />
          <circle
            cx="259"
            cy="7"
            r="4"
          />
          <circle
            cx="259"
            cy="7"
            r="3"
          />
          <circle
            cx="273"
            cy="7"
            r="4"
          />
          <circle
            cx="273"
            cy="7"
            r="3"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Ellie icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-ellie ellie-icon-example-custom-class"
        title="Ellie icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 280 14"
        >
          <circle
            cx="7"
            cy="7"
            r="4"
          />
          <circle
            cx="7"
            cy="7"
            r="3"
          />
          <circle
            cx="21"
            cy="7"
            r="4"
          />
          <circle
            cx="21"
            cy="7"
            r="3"
          />
          <circle
            cx="35"
            cy="7"
            r="4"
          />
          <circle
            cx="35"
            cy="7"
            r="3"
          />
          <circle
            cx="49"
            cy="7"
            r="4"
          />
          <circle
            cx="49"
            cy="7"
            r="3"
          />
          <circle
            cx="63"
            cy="7"
            r="4"
          />
          <circle
            cx="63"
            cy="7"
            r="3"
          />
          <circle
            cx="77"
            cy="7"
            r="4"
          />
          <circle
            cx="77"
            cy="7"
            r="3"
          />
          <circle
            cx="91"
            cy="7"
            r="4"
          />
          <circle
            cx="91"
            cy="7"
            r="3"
          />
          <circle
            cx="105"
            cy="7"
            r="4"
          />
          <circle
            cx="105"
            cy="7"
            r="3"
          />
          <circle
            cx="119"
            cy="7"
            r="4"
          />
          <circle
            cx="119"
            cy="7"
            r="3"
          />
          <circle
            cx="133"
            cy="7"
            r="4"
          />
          <circle
            cx="133"
            cy="7"
            r="3"
          />
          <circle
            cx="147"
            cy="7"
            r="4"
          />
          <circle
            cx="147"
            cy="7"
            r="3"
          />
          <circle
            cx="161"
            cy="7"
            r="4"
          />
          <circle
            cx="161"
            cy="7"
            r="3"
          />
          <circle
            cx="175"
            cy="7"
            r="4"
          />
          <circle
            cx="175"
            cy="7"
            r="3"
          />
          <circle
            cx="189"
            cy="7"
            r="4"
          />
          <circle
            cx="189"
            cy="7"
            r="3"
          />
          <circle
            cx="203"
            cy="7"
            r="4"
          />
          <circle
            cx="203"
            cy="7"
            r="3"
          />
          <circle
            cx="217"
            cy="7"
            r="4"
          />
          <circle
            cx="217"
            cy="7"
            r="3"
          />
          <circle
            cx="231"
            cy="7"
            r="4"
          />
          <circle
            cx="231"
            cy="7"
            r="3"
          />
          <circle
            cx="245"
            cy="7"
            r="4"
          />
          <circle
            cx="245"
            cy="7"
            r="3"
          />
          <circle
            cx="259"
            cy="7"
            r="4"
          />
          <circle
            cx="259"
            cy="7"
            r="3"
          />
          <circle
            cx="273"
            cy="7"
            r="4"
          />
          <circle
            cx="273"
            cy="7"
            r="3"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Ellie icon title
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDynamicIcon Eq 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-icon-eq slds-is-animated"
        title="Eq icon title"
      >
        <div
          className="slds-icon-eq__bar"
        />
        <div
          className="slds-icon-eq__bar"
        />
        <div
          className="slds-icon-eq__bar"
        />
        <span
          className="slds-assistive-text"
        >
          Eq icon title
        </span>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-icon-eq"
        title="Eq icon title"
      >
        <div
          className="slds-icon-eq__bar"
        />
        <div
          className="slds-icon-eq__bar"
        />
        <div
          className="slds-icon-eq__bar"
        />
        <span
          className="slds-assistive-text"
        >
          Eq icon title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDynamicIcon Score 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-score slds-is-animated"
        data-slds-state="positive"
        title="Score icon title"
      >
        <svg
          aria-hidden="true"
          className="slds-icon-score__positive"
          viewBox="0 0 5 5"
        >
          <circle
            cx="50%"
            cy="50%"
            r="1.875"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="slds-icon-score__negative"
          viewBox="0 0 5 5"
        >
          <circle
            cx="50%"
            cy="50%"
            r="1.875"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Score icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-score slds-is-animated"
        data-slds-state="negative"
        title="Score icon title"
      >
        <svg
          aria-hidden="true"
          className="slds-icon-score__positive"
          viewBox="0 0 5 5"
        >
          <circle
            cx="50%"
            cy="50%"
            r="1.875"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="slds-icon-score__negative"
          viewBox="0 0 5 5"
        >
          <circle
            cx="50%"
            cy="50%"
            r="1.875"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Score icon title
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDynamicIcon Strength 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength slds-is-animated"
        data-slds-strength="0"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength"
        data-slds-strength="1"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength"
        data-slds-strength="2"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength"
        data-slds-strength="3"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength"
        data-slds-strength="-1"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength"
        data-slds-strength="-2"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength"
        data-slds-strength="-3"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength slds-is-animated"
        data-slds-strength="3"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength slds-is-animated"
        data-slds-strength="-3"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-strength slds-is-animated slds-is-paused"
        data-slds-strength="0"
        title="Strength icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 27 7"
        >
          <circle
            cx="3.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="13.5"
            cy="3.5"
            r="3.025"
          />
          <circle
            cx="23.5"
            cy="3.5"
            r="3.025"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Strength icon title
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDynamicIcon Trend 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-trend slds-is-animated"
        data-slds-trend="neutral"
        title="Trend icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 16 16"
        >
          <path
            className="slds-icon-trend__arrow"
            d="M.75 8H11M8 4.5L11.5 8 8 11.5"
          />
          <circle
            className="slds-icon-trend__circle"
            cx="8"
            cy="8"
            r="7.375"
            transform="rotate(-28 8 8) scale(-1 1) translate(-16 0)"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Trend icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-trend slds-is-animated"
        data-slds-trend="down"
        title="Trend icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 16 16"
        >
          <path
            className="slds-icon-trend__arrow"
            d="M.75 8H11M8 4.5L11.5 8 8 11.5"
          />
          <circle
            className="slds-icon-trend__circle"
            cx="8"
            cy="8"
            r="7.375"
            transform="rotate(-28 8 8) scale(-1 1) translate(-16 0)"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Trend icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-trend slds-is-animated"
        data-slds-trend="up"
        title="Trend icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 16 16"
        >
          <path
            className="slds-icon-trend__arrow"
            d="M.75 8H11M8 4.5L11.5 8 8 11.5"
          />
          <circle
            className="slds-icon-trend__circle"
            cx="8"
            cy="8"
            r="7.375"
            transform="rotate(-28 8 8) scale(-1 1) translate(-16 0)"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Trend icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-trend"
        data-slds-trend="up"
        title="Trend icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 16 16"
        >
          <path
            className="slds-icon-trend__arrow"
            d="M.75 8H11M8 4.5L11.5 8 8 11.5"
          />
          <circle
            className="slds-icon-trend__circle"
            cx="8"
            cy="8"
            r="7.375"
            transform="rotate(-28 8 8) scale(-1 1) translate(-16 0)"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Trend icon title
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-trend slds-is-animated slds-is-paused"
        data-slds-trend="up"
        title="Trend icon title"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 16 16"
        >
          <path
            className="slds-icon-trend__arrow"
            d="M.75 8H11M8 4.5L11.5 8 8 11.5"
          />
          <circle
            className="slds-icon-trend__circle"
            cx="8"
            cy="8"
            r="7.375"
            transform="rotate(-28 8 8) scale(-1 1) translate(-16 0)"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Trend icon title
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDynamicIcon Typing 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-typing slds-is-animated"
        title="User is typing"
      >
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-assistive-text"
        >
          User is typing
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-typing slds-is-animated slds-is-paused"
        title="User is typing"
      >
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-assistive-text"
        >
          User is typing
        </span>
      </span>
    </div>
    <div
      className="slds-col_padded"
    >
      <span
        className="slds-icon-typing"
        title="User is typing"
      >
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-icon-typing__dot"
        />
        <span
          className="slds-assistive-text"
        >
          User is typing
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDynamicIcon Waffle 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <button
        className="slds-button slds-icon-waffle_container slds-is-animated"
        title="Open App Launcher"
      >
        <span
          className="slds-icon-waffle"
        >
          <span
            className="slds-r1"
          />
          <span
            className="slds-r2"
          />
          <span
            className="slds-r3"
          />
          <span
            className="slds-r4"
          />
          <span
            className="slds-r5"
          />
          <span
            className="slds-r6"
          />
          <span
            className="slds-r7"
          />
          <span
            className="slds-r8"
          />
          <span
            className="slds-r9"
          />
        </span>
        <span
          className="slds-assistive-text"
        >
          Open App Launcher
        </span>
      </button>
    </div>
    <div
      className="slds-col_padded"
    >
      <button
        className="slds-button slds-icon-waffle_container slds-is-animated slds-is-paused"
        title="Open App Launcher"
      >
        <span
          className="slds-icon-waffle"
        >
          <span
            className="slds-r1"
          />
          <span
            className="slds-r2"
          />
          <span
            className="slds-r3"
          />
          <span
            className="slds-r4"
          />
          <span
            className="slds-r5"
          />
          <span
            className="slds-r6"
          />
          <span
            className="slds-r7"
          />
          <span
            className="slds-r8"
          />
          <span
            className="slds-r9"
          />
        </span>
        <span
          className="slds-assistive-text"
        >
          Open App Launcher
        </span>
      </button>
    </div>
  </div>
</div>
`;
